--- a/index.html
+++ b/index.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />"
+
+    <script src="script.js" defer></script>
     <title>Debug challenge</title>
   </head>
   <body>
     <h1>Welcome to the debug challenge</h1>
-    <h2 class="rainbow-">
+    <h2 class="rainbow">
       This is a simple page that is meant to be used to debug your JS
       application.
-    </h
-
-   class="bold"
+    </h2>
+<p class="bold">
+  
       There should be multiple bugs inside your html, css and javascript files.
       There is also a missing tag for this text.
-
+</p>
 
     <br />
     <input type="text" id="name" placeholder="Enter your name" />
-    <div class="DISPLAY">
+    <div class="display"></div>
   </body>
 </html>
+
+ 
+
